01-namespace.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
   name: roboshop 
   labels: 
      project: roboshop 
      environment: dev
