03-multi-container.yaml
apiVersion: v1 
kind: Pod 
metadata: 
   name: multi-container 
   labels: 
      project: roboshop 
      purpose: containers-demo 
spec: 
  containers: 
  - name: nginx 
    image: nginx 
  - name: almalinux 
    image: almalinux:9       
    command: ["sleep","1000"]
