05-annotations.yaml
apiVersion: v1 
kind: Pod 
metadata: 
    name: annotations 
    labels: 
       project: roboshop 
       component: mysql
       tier: backend 
       environment: dev
    annotations: 
       description: "This pod is created by demonstrate pod annotations" 
       jenkins: "https://jenkins.com/build/job/roboshop-catalogue/3"    
spec: 
   containers: 
   - name: nginx 
     image: nginx
