07-env.yaml
apiVersion: v1 
kind: Pod 
metadata: 
   name: envar-demo 
   labels: 
      purpose: demonstrate-demo 
spec: 
   containers: 
   - name: nginx 
     image: nginx
