09-pod-config.yaml
apiVersion: v1 
kind: Pod 
metadata: 
   name: env-configmap 
spec: 
   containers: 
   - name: nginx 
     image: nginx
