18-daemonset.yaml
apiVersion: apps/v1 
kind: DaemonSet 
metadata: 
     name: fluentd-elasticsearch 
     namespace: roboshop 
     labels: 
        name: fluentd-logging 
spec: 
   selector: 
       matchLabels: 
            name: fluentd-elasticsearch 
   template: 
        metadata: 
              labels: 
                  name: fluentd-elasticsearch 
        spec: 
           tolerations: 
           # these tolerations are to have the daemonset running in control plane nodes 
           # remove them if control plane node should not ron pods 
           - key: node-rule.kubernetes.io/control-plane 
             operator: Exists 
             effect: NoSchedule 
           - key: node-rule.kubernetes.io/master 
             operator: Exists 
             effect: NoSchedule  
           containers: 
           - name: fluentd-elasticsearch 
          # this pod is collect host logs and send them to ELK cluster 
             image: quay.io/fluentd_elasticsearch/fluentd:v5.0.1 
             resources: 
                 limits: 
                    memory: 200Mi 
                 requests:
                    cpu: 100m 
                    memory: 200Mi 
             volumeMounts: 
             - name: varlog 
               mountPath: /var/log 
               readOnly: true 
           #it may be desirable to set a high priority class to ensure that daemonset pods 
           #preempts running pods 
           #priorityClassName: important 
           terminationGracePeriodSeconds: 30 
           volumes: 
           - name: varlog 
             hostPath: 
                 path: /var/log
