19-live-readiness.yaml
apiVersion: v1 
kind: Pod 
metadata: 
    name: liveness-http 
    labels: 
       test: liveness 
spec: 
   containers: 
   - name: liveness 
     image: nginx 
     livenessProbe: 
       tcpSocket: 
          port: 80
       initialDelaySeconds: 30 
       periodSeconds: 10 
     readinessProbe: 
        httpGet: 
           path: "/" 
           port: 80 
        initialDelaySeconds: 40 
        periodSeconds: 3
