13-service-np.yaml
apiVersion: v1 
kind: Service 
metadata: 
    name: nginx-np 
    labels: 
       purpose: service-np-demo 
spec: 
   type: NodePort 
   selector: 
      purpose: service-np-demo 
      project: roboshop 
      environment: dev 
   ports: 
   - protocol: TCP 
     port: 80 #service port 
     targetPort: 80 #container port 
---

apiVersion: v1 
kind: Pod 
metadata: 
     name: nginx-np 
     labels: 
         purpose: service-np-demo 
         project: roboshop 
         environment: dev 
spec: 
   containers: 
   - name: nginx 
     image: nginx
