16-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: nginx 
    labels: 
       purpose: deployment-demo 
       project: roboshop 
       app: nginx 
spec: 
   replicas: 3 
   # these are the labels replicaset use to create pod replicas this should match pod labels 
   selector: 
       matchLabels: 
           purpose: deployment-demo 
           project: roboshop 
           app: nginx 
   #This is pod definition 
   template: 
      metadata: 
          labels: 
             purpose: deployment-demo 
             project: roboshop 
             app: nginx 
      spec: 
        containers:  
        - name: nginx 
          image: nginx:latest 
---
apiVersion: v1 
kind: Service 
metadata:  
    name: nginx-svc 
    labels: 
       purpose: service-demo 
spec: 
   selector: 
      purpose: deployment-demo 
      project: roboshop 
      app: nginx 
   ports: 
   - protocol: TCP
     port: 80 #service port 
     targetPort: 80 #containerport                                             

apiVersion: apps/v1 
kind: Deployment
metadata: 
   name: nginx
   labels: 
     purpose: nginx-deploy 
     project: roboshop 
     app: nginx  
spec: 
  replicas: 2
  slector: 
     matchLabels: 
        purpose: nginx-depoy 
        project: roboshop 
        app: nginx  
  template: 
     metadata: 
        labels: 
           purpose: nginx-deploy 
           project: roboshop 
           app: nginx  
     spec: 
       containers: 
       - name: nginx 
         image: nginx
